--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 			<version>3.1.830</version>
 		</dependency>
 
+<!--		jasypt-->
+		<dependency>
+			<groupId>com.github.ulisesbocchio</groupId>
+			<artifactId>jasypt-spring-boot-starter</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+
 
 		<!--		阿里云内容安全-->
 		<dependency>
@@ -37,6 +44,12 @@
 			<version>1.1.0</version>
 		</dependency>
 
+
+<!--RabbitMQ-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 
 
 
