--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,31 @@
+#测试环境
 server:
-  port: 8080
+  port: 10500
 
+spring:
+  rabbitmq:
+    host: 1.94.28.8
+    port: 5672
+    username: root
+    password: genius_server_0704
+    virtualHost: /
+
+#阿里云ak
+aliyun:
+  secretId: LTAI5tFBzdovs8DgpwxFi2mP
+  secretKey: yW8sz7LhWKo63MNZBB8rdY1qDG1h24
 
 #  腾讯云
 tcyun:
-  secretId: 
-  secretKey: 
+  secretId: AKIDW8oWI81w5UihilfaP2Vv98rOjtvmPuOq
+  secretKey: kUA70tocL6wt3AEAykNsCJDscaj1S2hN
+
+
 
 
 #阿里云
 #aliyun:
-#  secretId:
-#  secretKey: 
+#  secretId: LTAI5tSBJDjWYyHtfE2HEGyN
+#  secretKey: jtIyL0fAF6ZgVIxUDXPtcJjvT2YHYr
 
 
-#阿里云ak
-aliyun:
-  secretId: 
-  secretKey: 
