--- a/pom.xml
+++ b/pom.xml
@@ -16,31 +16,8 @@
 	<description>rvc-audit</description>
 	<properties>
 		<java.version>11</java.version>
-		<spring-cloud.version>2021.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
-
-		<!-- springCloud -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-dependencies</artifactId>
-			<version>${spring-cloud.version}</version>
-			<type>pom</type>
-			<scope>import</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-bootstrap</artifactId>
-			<version>3.0.4</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-openfeign</artifactId>
-			<version>3.1.4</version>
-		</dependency>
-
-
 
 
 		<!--    	腾讯云内容安全-->
@@ -52,6 +29,7 @@
 			<version>3.1.830</version>
 		</dependency>
 
+<!--		jasypt-->
 		<dependency>
 			<groupId>com.github.ulisesbocchio</groupId>
 			<artifactId>jasypt-spring-boot-starter</artifactId>
@@ -59,8 +37,7 @@
 		</dependency>
 
 
-
-		<!--		&lt;!&ndash;		阿里云内容安全&ndash;&gt;-->
+		<!--		阿里云内容安全-->
 		<dependency>
 			<groupId>com.aliyun</groupId>
 			<artifactId>green20220302</artifactId>
