--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,20 @@
-#测试环境
 server:
-  port: 10500
+  port: 8080
 
-spring:
-  rabbitmq:
-    host: 1.94.28.8
-    port: 5672
-    username: root
-    password: genius_server_0704
-    virtualHost: /
-
-#阿里云ak
-aliyun:
-  secretId: LTAI5tFBzdovs8DgpwxFi2mP
-  secretKey: yW8sz7LhWKo63MNZBB8rdY1qDG1h24
 
 #  腾讯云
 tcyun:
-  secretId: AKIDW8oWI81w5UihilfaP2Vv98rOjtvmPuOq
-  secretKey: kUA70tocL6wt3AEAykNsCJDscaj1S2hN
-
-
+  secretId: 
+  secretKey: 
 
 
 #阿里云
 #aliyun:
-#  secretId: LTAI5tSBJDjWYyHtfE2HEGyN
-#  secretKey: jtIyL0fAF6ZgVIxUDXPtcJjvT2YHYr
+#  secretId:
+#  secretKey: 
 
 
+#阿里云ak
+aliyun:
+  secretId: 
+  secretKey: 
