[Test:审核服务] 文本审核测试 <Auto> -e:test -m:rvc-detection -v:1.0 -rp:10500-de:<-e ACTIVE=test -e UNIQUE_ID=0 -e SERVER_PORT=10500>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,20 +1,24 @@
+#测试环境
 server:
-  port: 8080
+  port: ${SERVER_PORT:10500}
 
-
-#  腾讯云
-tcyun:
-  secretId: 
-  secretKey: 
-
-
-#阿里云
-#aliyun:
-#  secretId:
-#  secretKey: 
-
+spring:
+  config:
+    import: classpath:you-cant-see-that.yml
+  rabbitmq:
+    host: ${RABBITMQ_HOST:ENC(yMFBFt6gkRargfjdfQRaLbQIj5k9HClY)}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${MQ_USERNAME:ENC(KoxmBnemAL30cCxMbCvVdA==)}
+    password: ${MQ_PASSWORD:ENC(bbi+chmzj/IqpNltm5VJxfRHVb767r2PppNXQsOHgVM=)}
+    virtualHost: /
 
 #阿里云ak
 aliyun:
-  secretId: 
-  secretKey: 
+  secretId: ${ALIYUN_SID:ENC(5VkDvvVEoAbgREvmA4OcyxxoWcFCkmLEl1VilZsTmTDD4k+Hj/pnJQ==)}
+  secretKey: ${ALIYUN_KEY:ENC(i0sSiBRWkVeSF9UFLz10nEztfXNoT8eNvRLNNB9zwSpYMXZip2aC7g==)}
+
+
+
+
+
+
