--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
 			<scope>test</scope>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.github.ulisesbocchio</groupId>-->
+<!--			<artifactId>jasypt-spring-boot-starter</artifactId>-->
+<!--		</dependency>-->
+
 
 	</dependencies>
 
