[Test:审核服务] 文本审核测试-nacos <Auto> -e:test -m:rvc-detection -v:1.0 -rp:9292-de:<-e ACTIVE=test -e UNIQUE_ID=0 -e SERVER_PORT=9292>

--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,106 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.4</version>
+		<version>2.4.1</version>
 		<relativePath/>
 	</parent>
+
 	<groupId>com.rvc</groupId>
 	<artifactId>rvc-audit</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+
 	<name>rvc-audit</name>
 	<description>rvc-audit</description>
 	<properties>
-		<java.version>11</java.version>
-	</properties>
-	<dependencies>
+		<maven.compiler.source>11</maven.compiler.source>
+		<maven.compiler.target>11</maven.compiler.target>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<spring-cloud.version>2020.0.3</spring-cloud.version>
+		<spring-cloud-start.version>3.0.1</spring-cloud-start.version>
+		<mysql.version>8.0.23</mysql.version>
 
+		<nacos.version>2.2.5.RELEASE</nacos.version>
+		<redis.version>2.3.9.RELEASE</redis.version>
+		<boot.version>2.3.9.RELEASE</boot.version>
+		<rockermq.version>2.3.9.RELEASE</rockermq.version>
+		<mybatis.version>2.1.1</mybatis.version>
+		<mybatis-plus.version>3.4.1</mybatis-plus.version>
+		<mybatis-join.version>1.2.4</mybatis-join.version>
+		<io-lettcue.version>6.1.6.RELEASE</io-lettcue.version>
+		<commons-pool2.version>2.9.0</commons-pool2.version>
+		<fastjson.version>1.2.75</fastjson.version>
+		<junit.version>4.12</junit.version>
+		<rvc-common.version>1.0-SNAPSHOT</rvc-common.version>
+	</properties>
+
+
+	<dependencyManagement>
+		<dependencies>
+		<!--springCloud-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-dependencies</artifactId>
+			<version>${spring-cloud.version}</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+			<version>${spring-cloud-start.version}</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		<!--nacos的管理依赖-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-alibaba-dependencies</artifactId>
+			<version>${nacos.version}</version>
+			<type>pom</type>
+			<scope>import</scope>
+		</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+		</dependency>
+
+		<!--nacos的配置管理依赖-->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+			<version>3.1.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.cloud</groupId>
+					<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-loadbalancer</artifactId>
+		</dependency>
 
 		<!--    	腾讯云内容安全-->
 		<dependency>
@@ -29,36 +111,30 @@
 			<version>3.1.830</version>
 		</dependency>
 
-<!--		jasypt-->
 		<dependency>
 			<groupId>com.github.ulisesbocchio</groupId>
 			<artifactId>jasypt-spring-boot-starter</artifactId>
 			<version>2.1.2</version>
 		</dependency>
 
-
-		<!--		阿里云内容安全-->
+		<!--		&lt;!&ndash;		阿里云内容安全&ndash;&gt;-->
 		<dependency>
 			<groupId>com.aliyun</groupId>
 			<artifactId>green20220302</artifactId>
 			<version>1.1.0</version>
 		</dependency>
 
-
-<!--RabbitMQ-->
+		<!--RabbitMQ-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
-
-
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 			<version>2.0.39</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -78,13 +154,6 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-<!--		<dependency>-->
-<!--			<groupId>com.github.ulisesbocchio</groupId>-->
-<!--			<artifactId>jasypt-spring-boot-starter</artifactId>-->
-<!--		</dependency>-->
-
-
 	</dependencies>
 
 	<build>
