--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,26 @@ server:
   port: ${SERVER_PORT:10500}
 
 spring:
+  application:
+    name: rvc-detection-service
+  cloud:
+    nacos:
+      server-addr: 117.21.200.55:18848
+      username: nacos
+      password: keKEaiai5201314
+      config:
+        file-extension: yaml
+
+
+
+
+  #  cloud:
+#    nacos:
+#      server-addr:
+#      username:
+#      password:
+#      config:
+#        file-extension: yaml
   config:
     import: classpath:you-cant-see-that.yml
   rabbitmq:
@@ -11,6 +31,7 @@ spring:
     username: ${MQ_USERNAME:ENC(KoxmBnemAL30cCxMbCvVdA==)}
     password: ${MQ_PASSWORD:ENC(bbi+chmzj/IqpNltm5VJxfRHVb767r2PppNXQsOHgVM=)}
     virtualHost: /
+
 
 #阿里云ak
 aliyun:
