[Test:审核服务] 文本审核 <Auto> -e:test -m:rvc-detection -v:1.0 -rp:9220 -de:<-e ACTIVE=test -e UNIQUE_ID=0 -e SERVER_PORT=9220>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,17 @@
 #测试环境
 server:
-  port: ${SERVER_PORT:10500}
+  port: ${SERVER_PORT:9220}
 
 spring:
   application:
     name: rvc-detection-service
   cloud:
     nacos:
-      server-addr: 117.21.200.55:18848
-      username: nacos
-      password: keKEaiai5201314
+      server-addr: ${NACOSADDR:ENC(mIQ9vQuo2M25EgeOZZwW4nYMACtogiyMHAI0Oh/Ypfc=)}
+      username: ${NACOSUSERNAME:ENC(TbWnEnWk1SO/FFv/yPAH/A==)}
+      password: ${NACOSPASSWORD:ENC(6ENawsNxgqHgbcrlhIQd+9rKWQl0Z+0G)}
       config:
         file-extension: yaml
-
-
 
 
   #  cloud:
