--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,9 +7,9 @@ spring:
     name: rvc-detection-service
   cloud:
     nacos:
-      server-addr: ${NACOSADDR:ENC(mIQ9vQuo2M25EgeOZZwW4nYMACtogiyMHAI0Oh/Ypfc=)}
-      username: ${NACOSUSERNAME:ENC(TbWnEnWk1SO/FFv/yPAH/A==)}
-      password: ${NACOSPASSWORD:ENC(6ENawsNxgqHgbcrlhIQd+9rKWQl0Z+0G)}
+      server-addr: ${NACOS_SERVER_ADDR:ENC(mIQ9vQuo2M25EgeOZZwW4nYMACtogiyMHAI0Oh/Ypfc=)}
+      username: ${NACOS_SERVER_USER:ENC(TbWnEnWk1SO/FFv/yPAH/A==)}
+      password: ${NACOS_SERVER_PASSWORD:ENC(6ENawsNxgqHgbcrlhIQd+9rKWQl0Z+0G)}
       config:
         file-extension: yaml
 
