[Test:审核服务] 审核上线  <Auto> -e:test -m:rvc-detection -v:1.0 -rp:9220 -type:single -de:<-e ACTIVE=test -e UNIQUE_ID=0 -e SERVER_PORT=9220>

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
 
 
 	<dependencies>
+
+		<!--雪花-->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-captcha</artifactId>
+			<version>5.8.18</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
