[Test:审核服务] 审核上线  <Auto> -e:test -m:rvc-detection -v:1.0 -rp:9220 -type:single -de:<-e ACTIVE=test -e UNIQUE_ID=0 -e SERVER_PORT=9220>

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,15 +1,15 @@
-#测试环境
-server:
-  port: ${SERVER_PORT:9220}
 
 spring:
-  profiles:
-    active: ${ACTIVE:test}
   application:
     name: rvc-detection-service
-
   config:
     import: classpath:you-cant-see-that.yml
+  rabbitmq:
+    host: ${RABBITMQ_HOST:ENC(yMFBFt6gkRargfjdfQRaLbQIj5k9HClY)}
+    port: ${RABBITMQ_PORT:5672}
+    username: ${MQ_USERNAME:ENC(KoxmBnemAL30cCxMbCvVdA==)}
+    password: ${MQ_PASSWORD:ENC(bbi+chmzj/IqpNltm5VJxfRHVb767r2PppNXQsOHgVM=)}
+    virtualHost: /
 
 #阿里云ak
 aliyun:
