[Test:审核服务] 审核重构  <Auto> -e:test -m:rvc-detection -v:1.0 -rp:9220 -type:single -de:<-e ACTIVE=test -e UNIQUE_ID=0 -e SERVER_PORT=9220>

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   profiles:
-    active: ${ACTIVE:prod}
+    active: ${ACTIVE:test}
   application:
     name: rvc-detection-service
 
